Index.html changed because of folder renaming.

--- a/Sources/Index.html
+++ b/Sources/Index.html
@@ -4,36 +4,36 @@
 	<title>i8254 Emulator</title>
 	<meta charset="utf-8">
 	<!-- Stylesheets -->
-	<link rel="stylesheet" href="css/global.css">
-	<link rel="stylesheet" href="css/interaction/base.css">
-	<link rel="stylesheet" href="css/interaction/dbf.css">
-	<link rel="stylesheet" href="css/interaction/rwl.css">
-	<link rel="stylesheet" href="css/interaction/cwr.css">
-	<link rel="stylesheet" href="css/interaction/busses.css">
-	<link rel="stylesheet" href="css/interaction/arrows.css">
-	<link rel="stylesheet" href="css/channels/channels.css">
-	<link rel="stylesheet" href="css/channels/arrows.css">
-	<link rel="stylesheet" href="css/features/features.css">
-	<link rel="stylesheet" href="css/features/generator/generator.css">
-	<link rel="stylesheet" href="css/features/generator/lines.css">
-	<link rel="stylesheet" href="css/features/generator/arrows.css">
-	<link rel="stylesheet" href="css/features/assemblerer.css">
-	<link rel="stylesheet" href="css/features/tasker.css">
+	<link rel="stylesheet" href="CSS/global.css">
+	<link rel="stylesheet" href="CSS/interaction/base.css">
+	<link rel="stylesheet" href="CSS/interaction/dbf.css">
+	<link rel="stylesheet" href="CSS/interaction/rwl.css">
+	<link rel="stylesheet" href="CSS/interaction/cwr.css">
+	<link rel="stylesheet" href="CSS/interaction/busses.css">
+	<link rel="stylesheet" href="CSS/interaction/arrows.css">
+	<link rel="stylesheet" href="CSS/channels/channels.css">
+	<link rel="stylesheet" href="CSS/channels/arrows.css">
+	<link rel="stylesheet" href="CSS/features/features.css">
+	<link rel="stylesheet" href="CSS/features/generator/generator.css">
+	<link rel="stylesheet" href="CSS/features/generator/lines.css">
+	<link rel="stylesheet" href="CSS/features/generator/arrows.css">
+	<link rel="stylesheet" href="CSS/features/assemblerer.css">
+	<link rel="stylesheet" href="CSS/features/tasker.css">
 	<!-- Scripts -->
-	<script src="js/libs/jquery.js"></script>
-	<script src="js/main.js"></script>
-	<script src="js/top/rwl.js"></script>
-	<script src="js/top/dbf.js"></script>
-	<script src="js/top/cwr.js"></script>
-	<script src="js/channels/channels.js"></script>
-	<script src="js/channels/bintrans.js"></script>
-	<script src="js/channels/generator/generator.js"></script>
-	<script src="js/channels/generator/screen.js"></script>
-	<script src="js/features/tasker.js"></script>
-	<script src="js/features/assemblerer/assemblerer.js"></script>
-	<script src="js/features/assemblerer/numbersValidator.js"></script>
-	<script src="js/features/assemblerer/transform.js"></script>
-	<script src="js/features/assemblerer/registers.js"></script>
+	<script src="JS/libs/jquery.js"></script>
+	<script src="JS/main.js"></script>
+	<script src="JS/top/rwl.js"></script>
+	<script src="JS/top/dbf.js"></script>
+	<script src="JS/top/cwr.js"></script>
+	<script src="JS/channels/channels.js"></script>
+	<script src="JS/channels/bintrans.js"></script>
+	<script src="JS/channels/generator/generator.js"></script>
+	<script src="JS/channels/generator/screen.js"></script>
+	<script src="JS/features/tasker.js"></script>
+	<script src="JS/features/assemblerer/assemblerer.js"></script>
+	<script src="JS/features/assemblerer/numbersValidator.js"></script>
+	<script src="JS/features/assemblerer/transform.js"></script>
+	<script src="JS/features/assemblerer/registers.js"></script>
 </head>
 <body>
 	<div id="interaction"> <!-- Взаимодействие (БД, ЛВВ, РУС, шины) -->
